--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "@types/node": "^20.3.3",
+    "@types/pdf-parse": "^1.1.1",
     "@xenova/transformers": "^2.2.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
