--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,10 @@
     "module": "NodeNext",
     "esModuleInterop": true,
     "rootDir": "src",
+    "skipLibCheck": true,
     "outDir": "dist"
-  }
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
