--- a/package.json
+++ b/package.json
@@ -4,15 +4,23 @@
   "type": "module",
   "scripts": {
     "dev": "ts-node --esm src/index.ts",
-    "start": "node dist/index.js",
-    "build": "tsc -b"
+    "build": "tsc --project ./ ",
+    "start": "node dist/index.js"
   },
   "dependencies": {
+    "@llama-node/llama-cpp": "^0.1.6",
+    "@types/cors": "^2.8.13",
     "@types/node": "^20.3.3",
     "@types/pdf-parse": "^1.1.1",
     "@xenova/transformers": "^2.2.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "pdf-parse": "^1.1.1"
+    "llama-cpp": "link:@types/llama-node/llama-cpp",
+    "llama-node": "^0.1.6",
+    "node-llama-cpp": "^2.1.2",
+    "pdf-parse": "^1.1.1",
+    "socket.io": "^4.7.2",
+    "transformers": "link:@types/@xenova/transformers"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
