--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@types/node": "^20.3.3",
     "@types/pdf-parse": "^1.1.1",
     "@xenova/transformers": "^2.2.0",
+    "bull": "^4.11.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "llama-cpp": "link:@types/llama-node/llama-cpp",
     "llama-node": "^0.1.6",
